fixed issues in the swagger documentation
