# docs/swagger.json
@@ -1098,9 +1098,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "successfully deletes role",
+                        "description": "successfully deleted role",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/dto.Role"
                         }
                     },
                     "400": {
@@ -1287,7 +1287,7 @@
                     "200": {
                         "description": "successfully assigned role",
                         "schema": {
-                            "$ref": "#/definitions/dto.Role"
+                            "type": "boolean"
                         }
                     },
                     "400": {
@@ -1375,7 +1375,7 @@
                     "200": {
                         "description": "successfully assigned role",
                         "schema": {
-                            "$ref": "#/definitions/dto.Role"
+                            "type": "boolean"
                         }
                     },
                     "400": {
@@ -1609,7 +1609,7 @@
                     "200": {
                         "description": "successfully assigned role",
                         "schema": {
-                            "$ref": "#/definitions/dto.Role"
+                            "type": "boolean"
                         }
                     },
                     "400": {
