# internal/handler/rest/role/role.go
@@ -74,7 +74,7 @@ func (r *role) CreateRole(ctx *gin.Context) {
 // @param 		 x-action header string true "action"
 // @param 		 x-tenant header string true "tenant"
 // @param 		 x-resource header string true "resource"
-// @Success      200  {object} dto.Role "successfully assigned role"
+// @Success      200  boolean 	true "successfully assigned role"
 // @Failure      400  {object}  model.ErrorResponse "required field error"
 // @Failure      401  {object}  model.ErrorResponse "unauthorized"
 // @Failure      403  {object}  model.ErrorResponse "access denied"
@@ -121,7 +121,7 @@ func (r *role) AssignRole(ctx *gin.Context) {
 // @param 		 x-action header string true "action"
 // @param 		 x-tenant header string true "tenant"
 // @param 		 x-resource header string true "resource"
-// @Success      200  {object} dto.Role "successfully assigned role"
+// @Success      200  boolean true "successfully assigned role"
 // @Failure      400  {object}  model.ErrorResponse "required field error"
 // @Failure      401  {object}  model.ErrorResponse "unauthorized"
 // @Failure      403  {object}  model.ErrorResponse "access denied"
@@ -211,7 +211,7 @@ func (r *role) UpdateRole(ctx *gin.Context) {
 // @param 		 x-action header string true "action"
 // @param 		 x-tenant header string true "tenant"
 // @param 		 x-resource header string true "resource"
-// @Success      200  string role deleted successfully "successfully deletes role"
+// @Success      200  {object}  dto.Role 			"successfully deleted role"
 // @Failure      400  {object}  model.ErrorResponse "invalid input error"
 // @Failure      404  {object}  model.ErrorResponse "role not found"
 // @Failure      401  {object}  model.ErrorResponse "unauthorized"
@@ -341,7 +341,7 @@ func (r *role) GetRole(ctx *gin.Context) {
 // @Produce      json
 // @param 		 userid path string true "user id"
 // @param 		 role body dto.RoleTenant true "role"
-// @Success      200  {object} dto.Role "successfully assigned role"
+// @Success      200  boolean 	true 				"successfully assigned role"
 // @Failure      400  {object}  model.ErrorResponse "required field error"
 // @Failure      401  {object}  model.ErrorResponse "unauthorized"
 // @Failure      403  {object}  model.ErrorResponse "access denied"
